--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
   <link rel="stylesheet" href="css/carbon-components.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BX9P5WN5HH"></script>
@@ -788,57 +788,6 @@
 
 
 
-<!-- Modal Cookie Consent -->
-<div id="cookie-modal" class="cds--modal cds--modal--lg" role="dialog" aria-modal="true" hidden>
-  <div class="cds--modal-container">
-    <div class="cds--modal-header">
-      <h2 class="cds--modal-header__heading">Usiamo i cookie 🍪</h2>
-    </div>
-    <div class="cds--modal-content">
-      <p>Questo sito utilizza cookie per migliorare la tua esperienza. Puoi accettare tutti i cookie o rifiutarli.</p>
-    </div>
-    <div class="cds--modal-footer">
-      <button id="accept-cookies" class="cds--btn cds--btn--primary">Accetta</button>
-      <button id="reject-cookies" class="cds--btn cds--btn--secondary">Rifiuta</button>
-    </div>
-  </div>
-</div>
-
-<!-- Overlay -->
-<div id="cookie-overlay" class="cds--modal-overlay" hidden></div>
-
-
-
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const modal = document.getElementById('cookie-modal');
-    const overlay = document.getElementById('cookie-overlay');
-    const acceptBtn = document.getElementById('accept-cookies');
-    const rejectBtn = document.getElementById('reject-cookies');
-
-    // Mostra il modal solo se non è già stato scelto
-    const consent = localStorage.getItem('cookie-consent');
-    if (!consent) {
-      modal.removeAttribute('hidden');
-      overlay.removeAttribute('hidden');
-    }
-
-    const setConsent = (value) => {
-      localStorage.setItem('cookie-consent', value);
-      modal.setAttribute('hidden', true);
-      overlay.setAttribute('hidden', true);
-      console.log(`Cookie consent: ${value}`);
-    };
-
-    acceptBtn.addEventListener('click', () => setConsent('accepted'));
-    rejectBtn.addEventListener('click', () => setConsent('rejected'));
-
-    // Chiudi se clicchi fuori
-    overlay.addEventListener('click', () => setConsent('rejected'));
-  });
-</script>
-
-
 
 
 
@@ -856,6 +805,7 @@
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="nav.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/6d9d5d6dc73c7ce2b1a6d5698029fb47.js"></script>
 
   <script>
     $(document).ready(function () {
