--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 
     <div style="margin-bottom: 10px; text-align: left; display:none;" id="newsletterContainer">
       <input type="checkbox" id="subscribeNewsletter" checked />
-      <label for="subscribeNewsletter">Stay in the loop! Subscribe to our monthly newsletter to receive new features updates, gear library expansion and creative tips!</label>
+      <label for="subscribeNewsletter">Stay in the loop to receive new features updates, gear library expansion and creative tips!</label>
     </div>
 
 
